broadcast video layout issue - active viewer list and count

--- a/public/assets/broadcast-viewers.css
+++ b/public/assets/broadcast-viewers.css
@@ -5,7 +5,7 @@ div.broadcast-viewers{
     top: 100px;
     overflow: auto;
     width: 400px;
-    background-color: black;
+    /* background-color: black; */
     text-align: left;
 }
 
